src/capi/fitpack_sphere_domains_c.f90


    !> Raw view of component 'phi': address of the first element, plus
    !> the component's 1 extent(s). Null pointer and zero extents when the
    !> object or the component is unallocated; an allocated but zero-sized
    !> component still reports its true shape, but has no representable address.
    !> Symbol uses the `getcomp_` infix (not `get_`) so it can never collide
    !> with a type-bound procedure named `get_<component>`.
    subroutine fitpack_sphere_c_getcomp_phi(this, ptr, extents) &
        bind(C, name='fitpack_sphere_c_getcomp_phi')
        type(fitpack_sphere_c), intent(in) :: this
        type(c_ptr), intent(out) :: ptr
        integer(c_int64_t), intent(out) :: extents(1)
        type(fitpack_sphere), pointer :: fthis

        ptr = c_null_ptr
        extents = 0_c_int64_t
        fthis => f_pointer(this)
        if (associated(fthis)) then
            if (allocated(fthis%phi)) then
                extents = int(shape(fthis%phi), kind=c_int64_t)
                if (size(fthis%phi) > 0) ptr = c_loc(fthis%phi)
            end if
        end if
    end subroutine fitpack_sphere_c_getcomp_phi

    !> Raw view of component 'r': address of the first element, plus
    !> the component's 1 extent(s). Null pointer and zero extents when the
    !> object or the component is unallocated; an allocated but zero-sized
    !> component still reports its true shape, but has no representable address.
    !> Symbol uses the `getcomp_` infix (not `get_`) so it can never collide
    !> with a type-bound procedure named `get_<component>`.
    subroutine fitpack_sphere_c_getcomp_r(this, ptr, extents) &
        bind(C, name='fitpack_sphere_c_getcomp_r')
        type(fitpack_sphere_c), intent(in) :: this
        type(c_ptr), intent(out) :: ptr
        integer(c_int64_t), intent(out) :: extents(1)
        type(fitpack_sphere), pointer :: fthis

        ptr = c_null_ptr
        extents = 0_c_int64_t
        fthis => f_pointer(this)
        if (associated(fthis)) then
            if (allocated(fthis%r)) then
                extents = int(shape(fthis%r), kind=c_int64_t)
                if (size(fthis%r) > 0) ptr = c_loc(fthis%r)
            end if
        end if
    end subroutine fitpack_sphere_c_getcomp_r

    !> Raw view of component 'w': address of the first element, plus
    !> the component's 1 extent(s). Null pointer and zero extents when the
    !> object or the component is unallocated; an allocated but zero-sized
    !> component still reports its true shape, but has no representable address.
    !> Symbol uses the `getcomp_` infix (not `get_`) so it can never collide
    !> with a type-bound procedure named `get_<component>`.
    subroutine fitpack_sphere_c_getcomp_w(this, ptr, extents) &
        bind(C, name='fitpack_sphere_c_getcomp_w')
        type(fitpack_sphere_c), intent(in) :: this
        type(c_ptr), intent(out) :: ptr
        integer(c_int64_t), intent(out) :: extents(1)
        type(fitpack_sphere), pointer :: fthis

        ptr = c_null_ptr
        extents = 0_c_int64_t
        fthis => f_pointer(this)
        if (associated(fthis)) then
            if (allocated(fthis%w)) then
                extents = int(shape(fthis%w), kind=c_int64_t)
                if (size(fthis%w) > 0) ptr = c_loc(fthis%w)
            end if
        end if
    end subroutine fitpack_sphere_c_getcomp_w

    !> Raw view of component 'wrk2': address of the first element, plus
    !> the component's 1 extent(s). Null pointer and zero extents when the
    !> object or the component is unallocated; an allocated but zero-sized
    !> component still reports its true shape, but has no representable address.
    !> Symbol uses the `getcomp_` infix (not `get_`) so it can never collide
    !> with a type-bound procedure named `get_<component>`.
    subroutine fitpack_sphere_c_getcomp_wrk2(this, ptr, extents) &
        bind(C, name='fitpack_sphere_c_getcomp_wrk2')
        type(fitpack_sphere_c), intent(in) :: this
        type(c_ptr), intent(out) :: ptr
        integer(c_int64_t), intent(out) :: extents(1)
        type(fitpack_sphere), pointer :: fthis

        ptr = c_null_ptr
        extents = 0_c_int64_t
        fthis => f_pointer(this)
        if (associated(fthis)) then
            if (allocated(fthis%wrk2)) then
                extents = int(shape(fthis%wrk2), kind=c_int64_t)
                if (size(fthis%wrk2) > 0) ptr = c_loc(fthis%wrk2)
            end if
        end if
    end subroutine fitpack_sphere_c_getcomp_wrk2

    !> Raw view of component 't': address of the first element, plus
    !> the component's 2 extent(s). Null pointer and zero extents when the
    !> object or the component is unallocated; an allocated but zero-sized
    !> component still reports its true shape, but has no representable address.
    !> Symbol uses the `getcomp_` infix (not `get_`) so it can never collide
    !> with a type-bound procedure named `get_<component>`.
    subroutine fitpack_sphere_c_getcomp_t(this, ptr, extents) &
        bind(C, name='fitpack_sphere_c_getcomp_t')
        type(fitpack_sphere_c), intent(in) :: this
        type(c_ptr), intent(out) :: ptr
        integer(c_int64_t), intent(out) :: extents(2)
        type(fitpack_sphere), pointer :: fthis

        ptr = c_null_ptr
        extents = 0_c_int64_t
        fthis => f_pointer(this)
        if (associated(fthis)) then
            if (allocated(fthis%t)) then
                extents = int(shape(fthis%t), kind=c_int64_t)
                if (size(fthis%t) > 0) ptr = c_loc(fthis%t)
            end if
        end if
    end subroutine fitpack_sphere_c_getcomp_t

    ! ===========================================================================================
    ! SECTION 9: Scalar Property Accessors
    ! ===========================================================================================

    !> Get pointer to scalar property 'm'
    type(c_ptr) function fitpack_sphere_c_ref_m(this) &
        bind(C, name='fitpack_sphere_c_ref_m')
        type(fitpack_sphere_c), intent(in) :: this
        type(fitpack_sphere), pointer :: fthis
        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_sphere_c_ref_m = c_loc(fthis%m)
        else
            fitpack_sphere_c_ref_m = c_null_ptr
        end if
    end function fitpack_sphere_c_ref_m

    !> Get pointer to scalar property 'lwrk2'
    type(c_ptr) function fitpack_sphere_c_ref_lwrk2(this) &
        bind(C, name='fitpack_sphere_c_ref_lwrk2')
        type(fitpack_sphere_c), intent(in) :: this
        type(fitpack_sphere), pointer :: fthis
        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_sphere_c_ref_lwrk2 = c_loc(fthis%lwrk2)
        else
            fitpack_sphere_c_ref_lwrk2 = c_null_ptr
        end if
    end function fitpack_sphere_c_ref_lwrk2

    !> Get pointer to scalar property 'nmax'
    type(c_ptr) function fitpack_sphere_c_ref_nmax(this) &
        bind(C, name='fitpack_sphere_c_ref_nmax')
        type(fitpack_sphere_c), intent(in) :: this
        type(fitpack_sphere), pointer :: fthis
        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_sphere_c_ref_nmax = c_loc(fthis%nmax)
        else
            fitpack_sphere_c_ref_nmax = c_null_ptr
        end if
    end function fitpack_sphere_c_ref_nmax

end module fitpack_sphere_domains_c
